# cq-pipe

./: .env.sample  .envrc  Containerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  run.py
.githooks/: pre-commit
.github/linters/: .hadolint.yaml  .isort.cfg
cq_pipe/: celery.py  extract.py  load.py  tasks.py  transform.py
tests/: crowdstrike_apple_host.json  crowdstrike_aws_host.json  qualys_aws_host.json  tenable_aws_host.json  test_cq_pipe.py  test_transform.py
toolbox/: Containerfile  Makefile  README.md  apt_preferences.conf  distrobox.ini  vscode_podman_container_shim.jsonc
