[tool.poetry]
name = "cq-pipe"
version = "0.1.0"
description = ""
authors = ["Max Schaefer <frederick.schaefer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
requests = "^2.31.0"
pydantic = "^2.5.2"
pymongo = "^4.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
